dont use block for keywords

--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,4 @@ defaults:
       title: String Trax
       image: /img/Social.png
       description: Professional violin and vocal tracks
-      keywords: |
-        Kallen OConnor, Recording, Violin, Vocal
+      keywords: Kallen OConnor, recording, violin, vocal
