--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ defaults:
       title: String Trax
       image: /img/Social.png
       description: Professional violin and vocal tracks
-      keywords: Kallen OConnor, recording, violin, vocal
+      keywords: Kallen O'Connor, recording, violin, vocal
